[gd_scene load_steps=7 format=3 uid="uid://do2udmdntfvfc"]

[ext_resource type="Texture2D" uid="uid://dgv4gt4qy0u84" path="res://main/assets_2d/building 1.svg" id="1_7wi2l"]
[ext_resource type="Script" path="res://main/components/building.gd" id="1_8cnyu"]
[ext_resource type="PackedScene" uid="uid://c3is6hsk6bycw" path="res://main/components/progress_bar.tscn" id="3_3pnsq"]
[ext_resource type="Texture2D" uid="uid://dsdiwj63hpkxv" path="res://main/assets_2d/bar-container2.svg" id="3_lknme"]

[sub_resource type="SpriteFrames" id="SpriteFrames_liimp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7wi2l")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_litgn"]
size = Vector2(191, 139)

[node name="building" type="Area2D" groups=["group_area_building"]]
y_sort_enabled = true
script = ExtResource("1_8cnyu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_liimp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 69.5)
shape = SubResource("RectangleShape2D_litgn")

[node name="Bar-container2" type="Sprite2D" parent="."]
position = Vector2(228, -29)
texture = ExtResource("3_lknme")

[node name="progressBar" parent="Bar-container2" instance=ExtResource("3_3pnsq")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]

[editable path="Bar-container2/progressBar"]
